--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <script data-goatcounter="https://ayooub.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
-    <title>Ayoub Jounaid - Software Engineering Student</title>
+    <title>Ayoub Jounaid </title>
   </head>
   <body>
     <div id="root"></div>
