--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Ayoub Jounaid - Software Engineering Student" />
     <meta name="twitter:description" content="Software Engineering Student specializing in full-stack development, backend systems, and low-level programming." />
-    <meta name="twitter:image" content="https://github.com/user-attachments/assets/754ac4cc-15e0-4293-880b-0e728b824133" />
+    <meta name="twitter:image" content="/images/portfolio/portfolio.png" />
     
     <script data-goatcounter="https://ayooub.goatcounter.com/count"
             async src="//gc.zgo.at/count.js"></script>
