update Open Graph image URL in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Software Engineering Student specializing in full-stack development, backend systems, and low-level programming." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ayooub.me/" />
-    <meta property="og:image" content="https://github.com/user-attachments/assets/754ac4cc-15e0-4293-880b-0e728b824133" />
+    <meta property="og:image" content="/images/portfolio/portfolio.png" />
     <meta property="og:site_name" content="Ayoub Jounaid Portfolio" />
     
     <!-- Twitter Card Meta Tags -->
