udpate meta tags

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Ayoub Jounaid - Software Engineering Student" />
-    <meta property="og:description" content="Software Engineering Student specializing in full-stack development, backend systems, and low-level programming." />
+    <meta property="og:description" content="Software Engineering Student Doing in full-stack development, Interested in backend systems, and low-level programming." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ayooub.me/" />
     <meta property="og:image" content="/images/portfolio/portfolio.png" />
